--- a/src/app/components/locale-switcher/locale-switcher.component.html
+++ b/src/app/components/locale-switcher/locale-switcher.component.html
@@ -1,7 +1,7 @@
 <div class="locale-switcher">
-    <i-feather name="globe" class="lang-icon" (click)="toggle($event)"></i-feather>
+    <i-feather name="globe" class="lang-icon" (click)="toggle()"></i-feather>
 
-    <ul *ngIf="isOpen" id="locale-selector" (click)="toggle($event)">
+    <ul *ngIf="isOpen" id="locale-selector" (click)="toggle()">
         <span class="selector-caret"></span>
         <ng-container *ngFor="let locale of locales;">
             <li (click)="onChange(locale)" [class.selected]="locale === currentLocale">{{ 'LOCALES.' + locale | translate }}</li>
