[feature] Add contact form

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -24,10 +24,5 @@
 
 <section id="contact">
     <h3 [translate]="'HOME.CONTACT_ME.TITLE'"></h3>
-    <pre><code><span class="highlight">▲</span> node
-
-<span class="highlight">></span> import {{'{'}} MailService {{'}'}} from 'mail'
-<span class="highlight">></span> MailService.search('dsgdsr 🦄')
-
-Contact mail found: <a href="mailto:contact@dsgdsr.me">contact@dsgdsr.me</a></code></pre>
+    <app-contact></app-contact>
 </section>
