--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -77,35 +77,17 @@
         }
     }
 
+
     #contact {
+        display: flex;
+        flex-direction: column;
         padding: 0 2.2em 10rem 2.2em;
 
         @media (min-width: 600px) {
             padding-bottom: 8rem;
         }
-            
-        pre {
-            color: white;
-            margin: 4.5rem auto 0 auto;
-            background: var(--bg-secondary-color);
-            border-radius: 0.375em;
-            width: fit-content;
-            max-width: 100%;
 
-            code {
-                background-color: transparent;
-                line-height: 1.4;
-                font-size: 1rem;
-                display: block;
-                padding: 1.4rem 1.8rem;
-                display: block;
-                white-space: pre-wrap;
-            }
-
-            a {
-                text-decoration: underline;
-            }
-        }
+        
     }
 
     #featured-projects, #contact {
@@ -115,12 +97,6 @@
             text-decoration: overline;
             font-size: 1.75rem;
             margin: 0;
-        }
-    }
-
-    #about-me, #contact {
-        .highlight, a {
-            color: var(--color-text-main);
         }
     }
 }
