--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,12 @@ a * {
 
 #about-me .highlight {
     font-family: var(--system-fonts);
-    color: var(--color-text-main);
+}
+
+#about-me, #contact {
+    .highlight, a {
+        color: var(--color-text-main);
+    }
 }
 
 body, app-root {
